	* Implemented header controls in the Edit Log Dialog.
	* Added a Date Picker Dialog in 'src/rdlogeditb/datedialog.cpp'
	and 'src/rdlogeditb/datedialog.h'.
2017-01-31 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the ability to Add and Delete logs in rdlogeditb(1).
2017-02-01 Fred Gleason <fredg@paravelsystems.com>
	* Implemented double-click for the log list in rdlogeditb(1).
2017-02-06 Fred Gleason <fredg@paravelsystems.com>
	* Implemented 'Save As' for logs.
2017-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Populated editor buttons in the Edit Log dialog.
2017-02-15 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'LogLine' class in 'src/rdlogeditb/logline.cpp' and
	'src/rdlogeditb/logline.h'.
	* Added a 'Log' class in 'src/rdlogeditb/log.cpp' and
	'src/rdlogeditb/log.h'.
	* Refactored the 'LogModel' class to use the 'Log' data store.
2017-02-15 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'Edit Log Entry' dialog in
	'src/rdlogeditb/editloglinedialog.cpp' and
	'src/rdlogeditb/editloglinedialog.h'.
2017-02-15 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Pick Cart' dialog in 'src/rdlogeditb/pickcartdialog.cpp'
	and 'src/rdlogeditb/pickcartdialog.h'.
	* Added 'Group', 'Length', 'Label', 'Composer', 'Conductor',
	'Publisher', 'Client', 'Agency' and 'User Defined' fields to
	the LibraryModel class in 'src/common/librarymodel.cpp' and
	'src/common/librarymodel.h'.
	* Moved the 'Log', 'LogLine', 'LogModel' and 'LogListModel'
	classes from 'src/rdlogeditb/' to 'src/common/'.
2017-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'CartFilterWidget' class in 'src/common/cartfilterwidget.cpp'
	and 'src/common/cartfilterwidget.h'.
2017-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up cart picking in rdlogeditb(1).
2017-02-21 Fred Gleason <fredg@paravelsystems.com>
	* Got log saves working in rdlogeditb(1).
2017-02-21 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the 'Insert Cart' button in rdlogeditb(1).